--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   justify-content: space-between;
-  height: calc(100vh - 122px);
+  height: calc(100vh - 3.6em);
   padding: 0 8em 0 8em;
   max-width: 80em;
 }
